# snthebot2

./: .env  .gitignore  Cargo.toml  LICENSE  readme.md
src/: main.rs
src/commands/: fun.rs  mod.rs  osu.rs  reddit.rs
